apps/cli/src/tui/widgets/snapshots/diffview__text.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
┏━ › src/parser.rs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃ +3 -1                                                                        ┃
┃           │ @@ -10,4 +10,6 @@ fn parse(input: &str)                          ┃
┃  10   10  │      let mut tokens = lex(input);                                ┃
┃  11       │ -    let ast = build(tokens);                                    ┃
┃       11  │ +    let ast = build(&mut tokens)?;                              ┃
┃       12  │ +    validate(&ast)?;                                            ┃
┃       13  │ +    Ok(ast)                                                     ┃
┃  12   14  │  }                                                               ┃
┃                                                                              ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
=== styles (truecolor, unicode) ===
0:0-4 fg=#ffe066
0:5-17 fg=#ffe066 BOLD
0:18-79 fg=#ffe066
1:0-0 fg=#ffe066
1:2-3 fg=#3fb950
1:5-6 fg=#f85149
1:79-79 fg=#ffe066
2:0-0 fg=#ffe066
2:12-12 fg=#949494
2:14-52 fg=#58a6ff
2:79-79 fg=#ffe066
3:0-0 fg=#ffe066
3:1-10 fg=#949494
3:12-12 fg=#949494
3:79-79 fg=#ffe066
4:0-0 fg=#ffe066
4:1-10 fg=#949494
4:12-12 fg=#949494
4:14-42 fg=#f85149
4:79-79 fg=#ffe066
5:0-0 fg=#ffe066
5:1-10 fg=#949494
5:12-12 fg=#949494
5:14-48 fg=#3fb950
5:79-79 fg=#ffe066
6:0-0 fg=#ffe066
6:1-10 fg=#949494
6:12-12 fg=#949494
6:14-34 fg=#3fb950
6:79-79 fg=#ffe066
7:0-0 fg=#ffe066
7:1-10 fg=#949494
7:12-12 fg=#949494
7:14-25 fg=#3fb950
7:79-79 fg=#ffe066
8:0-0 fg=#ffe066
8:1-10 fg=#949494
8:12-12 fg=#949494
8:79-79 fg=#ffe066
9:0-0 fg=#ffe066
9:79-79 fg=#ffe066
10:0-79 fg=#ffe066
=== styles (256, unicode) ===
0:0-4 fg=@221
0:5-17 fg=@221 BOLD
0:18-79 fg=@221
1:0-0 fg=@221
1:2-3 fg=@35
1:5-6 fg=@203
1:79-79 fg=@221
2:0-0 fg=@221
2:12-12 fg=@246
2:14-52 fg=@75
2:79-79 fg=@221
3:0-0 fg=@221
3:1-10 fg=@246
3:12-12 fg=@246
3:79-79 fg=@221
4:0-0 fg=@221
4:1-10 fg=@246
4:12-12 fg=@246
4:14-42 fg=@203
4:79-79 fg=@221
5:0-0 fg=@221
5:1-10 fg=@246
5:12-12 fg=@246
5:14-48 fg=@35
5:79-79 fg=@221
6:0-0 fg=@221
6:1-10 fg=@246
6:12-12 fg=@246
6:14-34 fg=@35
6:79-79 fg=@221
7:0-0 fg=@221
7:1-10 fg=@246
7:12-12 fg=@246
7:14-25 fg=@35
7:79-79 fg=@221
8:0-0 fg=@221
8:1-10 fg=@246
8:12-12 fg=@246
8:79-79 fg=@221
9:0-0 fg=@221
9:79-79 fg=@221
10:0-79 fg=@221
=== styles (16, unicode) ===
0:0-4 fg=LightYellow
0:5-17 fg=LightYellow BOLD
0:18-79 fg=LightYellow
1:0-0 fg=LightYellow
1:2-3 fg=Green
1:5-6 fg=Red
1:79-79 fg=LightYellow
2:0-0 fg=LightYellow
2:12-12 fg=DarkGray
2:14-52 fg=Blue
2:79-79 fg=LightYellow
3:0-0 fg=LightYellow
3:1-10 fg=DarkGray
3:12-12 fg=DarkGray
3:79-79 fg=LightYellow
4:0-0 fg=LightYellow
4:1-10 fg=DarkGray
4:12-12 fg=DarkGray
4:14-42 fg=Red
4:79-79 fg=LightYellow
5:0-0 fg=LightYellow
5:1-10 fg=DarkGray
5:12-12 fg=DarkGray
5:14-48 fg=Green
5:79-79 fg=LightYellow
6:0-0 fg=LightYellow
6:1-10 fg=DarkGray
6:12-12 fg=DarkGray
6:14-34 fg=Green
6:79-79 fg=LightYellow
7:0-0 fg=LightYellow
7:1-10 fg=DarkGray
7:12-12 fg=DarkGray
7:14-25 fg=Green
7:79-79 fg=LightYellow
8:0-0 fg=LightYellow
8:1-10 fg=DarkGray
8:12-12 fg=DarkGray
8:79-79 fg=LightYellow
9:0-0 fg=LightYellow
9:79-79 fg=LightYellow
10:0-79 fg=LightYellow
=== styles (no-color, unicode) ===
0:0-79 BOLD | REVERSED
1:0-0 BOLD | REVERSED
1:79-79 BOLD | REVERSED
2:0-0 BOLD | REVERSED
2:12-12 DIM
2:79-79 BOLD | REVERSED
3:0-0 BOLD | REVERSED
3:1-10 DIM
3:12-12 DIM
3:79-79 BOLD | REVERSED
4:0-0 BOLD | REVERSED
4:1-10 DIM
4:12-12 DIM
4:79-79 BOLD | REVERSED
5:0-0 BOLD | REVERSED
5:1-10 DIM
5:12-12 DIM
5:79-79 BOLD | REVERSED
6:0-0 BOLD | REVERSED
6:1-10 DIM
6:12-12 DIM
6:79-79 BOLD | REVERSED
7:0-0 BOLD | REVERSED
7:1-10 DIM
7:12-12 DIM
7:79-79 BOLD | REVERSED
8:0-0 BOLD | REVERSED
8:1-10 DIM
8:12-12 DIM
8:79-79 BOLD | REVERSED
9:0-0 BOLD | REVERSED
9:79-79 BOLD | REVERSED
10:0-79 BOLD | REVERSED
=== styles (high-contrast, unicode) ===
0:0-4 fg=#ffe066 bg=#000000
0:5-17 fg=#ffe066 bg=#000000 BOLD
0:18-79 fg=#ffe066 bg=#000000
1:0-0 fg=#ffe066 bg=#000000
1:1-1 fg=#ffffff bg=#000000
1:2-3 fg=#7ee787 bg=#000000
1:4-4 fg=#ffffff bg=#000000
1:5-6 fg=#ffa198 bg=#000000
1:7-78 fg=#ffffff bg=#000000
1:79-79 fg=#ffe066 bg=#000000
2:0-0 fg=#ffe066 bg=#000000
2:1-11 fg=#ffffff bg=#000000
2:12-12 fg=#c6c6c6 bg=#000000
2:13-13 fg=#ffffff bg=#000000
2:14-52 fg=#a5d6ff bg=#000000
2:53-78 fg=#ffffff bg=#000000
2:79-79 fg=#ffe066 bg=#000000
3:0-0 fg=#ffe066 bg=#000000
3:1-10 fg=#c6c6c6 bg=#000000
3:11-11 fg=#ffffff bg=#000000
3:12-12 fg=#c6c6c6 bg=#000000
3:13-78 fg=#ffffff bg=#000000
3:79-79 fg=#ffe066 bg=#000000
4:0-0 fg=#ffe066 bg=#000000
4:1-10 fg=#c6c6c6 bg=#000000
4:11-11 fg=#ffffff bg=#000000
4:12-12 fg=#c6c6c6 bg=#000000
4:13-13 fg=#ffffff bg=#000000
4:14-42 fg=#ffa198 bg=#000000
4:43-78 fg=#ffffff bg=#000000
4:79-79 fg=#ffe066 bg=#000000
5:0-0 fg=#ffe066 bg=#000000
5:1-10 fg=#c6c6c6 bg=#000000
5:11-11 fg=#ffffff bg=#000000
5:12-12 fg=#c6c6c6 bg=#000000
5:13-13 fg=#ffffff bg=#000000
5:14-48 fg=#7ee787 bg=#000000
5:49-78 fg=#ffffff bg=#000000
5:79-79 fg=#ffe066 bg=#000000
6:0-0 fg=#ffe066 bg=#000000
6:1-10 fg=#c6c6c6 bg=#000000
6:11-11 fg=#ffffff bg=#000000
6:12-12 fg=#c6c6c6 bg=#000000
6:13-13 fg=#ffffff bg=#000000
6:14-34 fg=#7ee787 bg=#000000
6:35-78 fg=#ffffff bg=#000000
6:79-79 fg=#ffe066 bg=#000000
7:0-0 fg=#ffe066 bg=#000000
7:1-10 fg=#c6c6c6 bg=#000000
7:11-11 fg=#ffffff bg=#000000
7:12-12 fg=#c6c6c6 bg=#000000
7:13-13 fg=#ffffff bg=#000000
7:14-25 fg=#7ee787 bg=#000000
7:26-78 fg=#ffffff bg=#000000
7:79-79 fg=#ffe066 bg=#000000
8:0-0 fg=#ffe066 bg=#000000
8:1-10 fg=#c6c6c6 bg=#000000
8:11-11 fg=#ffffff bg=#000000
8:12-12 fg=#c6c6c6 bg=#000000
8:13-78 fg=#ffffff bg=#000000
8:79-79 fg=#ffe066 bg=#000000
9:0-0 fg=#ffe066 bg=#000000
9:1-78 fg=#ffffff bg=#000000
9:79-79 fg=#ffe066 bg=#000000
10:0-79 fg=#ffe066 bg=#000000
=== text (ascii) ===
#= > src/parser.rs ============================================================#
# +3 -1                                                                        #
#           | @@ -10,4 +10,6 @@ fn parse(input: &str)                          #
#  10   10  |      let mut tokens = lex(input);                                #
#  11       | -    let ast = build(tokens);                                    #
#       11  | +    let ast = build(&mut tokens)?;                              #
#       12  | +    validate(&ast)?;                                            #
#       13  | +    Ok(ast)                                                     #
#  12   14  |  }                                                               #
#                                                                              #
#==============================================================================#
=== styles (truecolor, ascii) ===
0:0-4 fg=#ffe066
0:5-17 fg=#ffe066 BOLD
0:18-79 fg=#ffe066
1:0-0 fg=#ffe066
1:2-3 fg=#3fb950
1:5-6 fg=#f85149
1:79-79 fg=#ffe066
2:0-0 fg=#ffe066
2:12-12 fg=#949494
2:14-52 fg=#58a6ff
2:79-79 fg=#ffe066
3:0-0 fg=#ffe066
3:1-10 fg=#949494
3:12-12 fg=#949494
3:79-79 fg=#ffe066
4:0-0 fg=#ffe066
4:1-10 fg=#949494
4:12-12 fg=#949494
4:14-42 fg=#f85149
4:79-79 fg=#ffe066
5:0-0 fg=#ffe066
5:1-10 fg=#949494
5:12-12 fg=#949494
5:14-48 fg=#3fb950
5:79-79 fg=#ffe066
6:0-0 fg=#ffe066
6:1-10 fg=#949494
6:12-12 fg=#949494
6:14-34 fg=#3fb950
6:79-79 fg=#ffe066
7:0-0 fg=#ffe066
7:1-10 fg=#949494
7:12-12 fg=#949494
7:14-25 fg=#3fb950
7:79-79 fg=#ffe066
8:0-0 fg=#ffe066
8:1-10 fg=#949494
8:12-12 fg=#949494
8:79-79 fg=#ffe066
9:0-0 fg=#ffe066
9:79-79 fg=#ffe066
10:0-79 fg=#ffe066
=== styles (256, ascii) ===
0:0-4 fg=@221
0:5-17 fg=@221 BOLD
0:18-79 fg=@221
1:0-0 fg=@221
1:2-3 fg=@35
1:5-6 fg=@203
1:79-79 fg=@221
2:0-0 fg=@221
2:12-12 fg=@246
2:14-52 fg=@75
2:79-79 fg=@221
3:0-0 fg=@221
3:1-10 fg=@246
3:12-12 fg=@246
3:79-79 fg=@221
4:0-0 fg=@221
4:1-10 fg=@246
4:12-12 fg=@246
4:14-42 fg=@203
4:79-79 fg=@221
5:0-0 fg=@221
5:1-10 fg=@246
5:12-12 fg=@246
5:14-48 fg=@35
5:79-79 fg=@221
6:0-0 fg=@221
6:1-10 fg=@246
6:12-12 fg=@246
6:14-34 fg=@35
6:79-79 fg=@221
7:0-0 fg=@221
7:1-10 fg=@246
7:12-12 fg=@246
7:14-25 fg=@35
7:79-79 fg=@221
8:0-0 fg=@221
8:1-10 fg=@246
8:12-12 fg=@246
8:79-79 fg=@221
9:0-0 fg=@221
9:79-79 fg=@221
10:0-79 fg=@221
=== styles (16, ascii) ===
0:0-4 fg=LightYellow
0:5-17 fg=LightYellow BOLD
0:18-79 fg=LightYellow
1:0-0 fg=LightYellow
1:2-3 fg=Green
1:5-6 fg=Red
1:79-79 fg=LightYellow
2:0-0 fg=LightYellow
2:12-12 fg=DarkGray
2:14-52 fg=Blue
2:79-79 fg=LightYellow
3:0-0 fg=LightYellow
3:1-10 fg=DarkGray
3:12-12 fg=DarkGray
3:79-79 fg=LightYellow
4:0-0 fg=LightYellow
4:1-10 fg=DarkGray
4:12-12 fg=DarkGray
4:14-42 fg=Red
4:79-79 fg=LightYellow
5:0-0 fg=LightYellow
5:1-10 fg=DarkGray
5:12-12 fg=DarkGray
5:14-48 fg=Green
5:79-79 fg=LightYellow
6:0-0 fg=LightYellow
6:1-10 fg=DarkGray
6:12-12 fg=DarkGray
6:14-34 fg=Green
6:79-79 fg=LightYellow
7:0-0 fg=LightYellow
7:1-10 fg=DarkGray
7:12-12 fg=DarkGray
7:14-25 fg=Green
7:79-79 fg=LightYellow
8:0-0 fg=LightYellow
8:1-10 fg=DarkGray
8:12-12 fg=DarkGray
8:79-79 fg=LightYellow
9:0-0 fg=LightYellow
9:79-79 fg=LightYellow
10:0-79 fg=LightYellow
=== styles (no-color, ascii) ===
0:0-79 BOLD | REVERSED
1:0-0 BOLD | REVERSED
1:79-79 BOLD | REVERSED
2:0-0 BOLD | REVERSED
2:12-12 DIM
2:79-79 BOLD | REVERSED
3:0-0 BOLD | REVERSED
3:1-10 DIM
3:12-12 DIM
3:79-79 BOLD | REVERSED
4:0-0 BOLD | REVERSED
4:1-10 DIM
4:12-12 DIM
4:79-79 BOLD | REVERSED
5:0-0 BOLD | REVERSED
5:1-10 DIM
5:12-12 DIM
5:79-79 BOLD | REVERSED
6:0-0 BOLD | REVERSED
6:1-10 DIM
6:12-12 DIM
6:79-79 BOLD | REVERSED
7:0-0 BOLD | REVERSED
7:1-10 DIM
7:12-12 DIM
7:79-79 BOLD | REVERSED
8:0-0 BOLD | REVERSED
8:1-10 DIM
8:12-12 DIM
8:79-79 BOLD | REVERSED
9:0-0 BOLD | REVERSED
9:79-79 BOLD | REVERSED
10:0-79 BOLD | REVERSED
=== styles (high-contrast, ascii) ===
0:0-4 fg=#ffe066 bg=#000000
0:5-17 fg=#ffe066 bg=#000000 BOLD
0:18-79 fg=#ffe066 bg=#000000
1:0-0 fg=#ffe066 bg=#000000
1:1-1 fg=#ffffff bg=#000000
1:2-3 fg=#7ee787 bg=#000000
1:4-4 fg=#ffffff bg=#000000
1:5-6 fg=#ffa198 bg=#000000
1:7-78 fg=#ffffff bg=#000000
1:79-79 fg=#ffe066 bg=#000000
2:0-0 fg=#ffe066 bg=#000000
2:1-11 fg=#ffffff bg=#000000
2:12-12 fg=#c6c6c6 bg=#000000
2:13-13 fg=#ffffff bg=#000000
2:14-52 fg=#a5d6ff bg=#000000
2:53-78 fg=#ffffff bg=#000000
2:79-79 fg=#ffe066 bg=#000000
3:0-0 fg=#ffe066 bg=#000000
3:1-10 fg=#c6c6c6 bg=#000000
3:11-11 fg=#ffffff bg=#000000
3:12-12 fg=#c6c6c6 bg=#000000
3:13-78 fg=#ffffff bg=#000000
3:79-79 fg=#ffe066 bg=#000000
4:0-0 fg=#ffe066 bg=#000000
4:1-10 fg=#c6c6c6 bg=#000000
4:11-11 fg=#ffffff bg=#000000
4:12-12 fg=#c6c6c6 bg=#000000
4:13-13 fg=#ffffff bg=#000000
4:14-42 fg=#ffa198 bg=#000000
4:43-78 fg=#ffffff bg=#000000
4:79-79 fg=#ffe066 bg=#000000
5:0-0 fg=#ffe066 bg=#000000
5:1-10 fg=#c6c6c6 bg=#000000
5:11-11 fg=#ffffff bg=#000000
5:12-12 fg=#c6c6c6 bg=#000000
5:13-13 fg=#ffffff bg=#000000
5:14-48 fg=#7ee787 bg=#000000
5:49-78 fg=#ffffff bg=#000000
5:79-79 fg=#ffe066 bg=#000000
6:0-0 fg=#ffe066 bg=#000000
6:1-10 fg=#c6c6c6 bg=#000000
6:11-11 fg=#ffffff bg=#000000
6:12-12 fg=#c6c6c6 bg=#000000
6:13-13 fg=#ffffff bg=#000000
6:14-34 fg=#7ee787 bg=#000000
6:35-78 fg=#ffffff bg=#000000
6:79-79 fg=#ffe066 bg=#000000
7:0-0 fg=#ffe066 bg=#000000
7:1-10 fg=#c6c6c6 bg=#000000
7:11-11 fg=#ffffff bg=#000000
7:12-12 fg=#c6c6c6 bg=#000000
7:13-13 fg=#ffffff bg=#000000
7:14-25 fg=#7ee787 bg=#000000
7:26-78 fg=#ffffff bg=#000000
7:79-79 fg=#ffe066 bg=#000000
8:0-0 fg=#ffe066 bg=#000000
8:1-10 fg=#c6c6c6 bg=#000000
8:11-11 fg=#ffffff bg=#000000
8:12-12 fg=#c6c6c6 bg=#000000
8:13-78 fg=#ffffff bg=#000000
8:79-79 fg=#ffe066 bg=#000000
9:0-0 fg=#ffe066 bg=#000000
9:1-78 fg=#ffffff bg=#000000
9:79-79 fg=#ffe066 bg=#000000
10:0-79 fg=#ffe066 bg=#000000
